Added Wordpress skill and fixed incorrect text

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <header>
     <h1 class="title"><strong>VINICIUS MENESES</strong></h1>
-    <h2 class="subtitle">Desenvolvedor Front-End</h2>
+    <h2 class="subtitle">Desenvolvedor Web</h2>
     <ul class="social-media">
       <li>
         <a href="https://github.com/viniciusmeneses" target="_blank"><i class="fab fa-github"></i></a>
@@ -31,9 +31,9 @@
   </header>
   <section id="about-me">
     <h2>SOBRE MIM</h2>
-    <p>Tenho 17 anos e sou formado em Técnico de Informática pela ETEC Hortolândia. Adoro programar e aprender as
+    <p>Tenho 17 anos e sou formado em Técnico em Informática pela ETEC Hortolândia. Amo programar e aprender as
       tecnologias utilizadas no desenvolvimento web, a fim de desenvolver projetos utilizando-as para apeifeiçoar meu
-      conhecimento. Atualmente estudo através de plataformas que oferecem cursos online e desenvolvo projetos <i>open-source</i>
+      conhecimento. Atualmente estudo através de plataformas que oferecem cursos online e desenvolvo projetos <i>open source</i>
       para serem utilizados no dia a dia por qualquer pessoa.</p>
   </section>
   <section id="skills">
@@ -51,6 +51,7 @@
         <li>Node.js</li>
         <li>Express.js</li>
         <li>SQL</li>
+        <li>Wordpress</li>
         <li>Firebase</li>
         <li>Git</li>
       </ul>
@@ -58,7 +59,7 @@
   </section>
   <section id="portfolio">
     <h2>PORTFÓLIO</h2>
-    <p>Todos os projetos em que eu contribui ou foram desenvolvidos por mim podem ser testados e acessados através do meu perfil no Github.</p>
+    <p>Todos os projetos em que contribui ou foram desenvolvidos por mim podem ser testados e visualizados através do meu perfil no Github.</p>
     <a href="https://github.com/viniciusmeneses" target="_blank" class="btn-portfolio">Acessar Perfil</a>
   </section>
   <section id="achievements">
