Implemented custom scrollbar and changed layout to add a sliding anchor

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,600,700" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
@@ -15,28 +16,31 @@
 
 <body>
   <header>
-    <h1 class="title"><strong>VINICIUS MENESES</strong></h1>
-    <h2 class="subtitle">Desenvolvedor Web</h2>
-    <ul class="social-media">
-      <li>
-        <a href="https://github.com/viniciusmeneses" target="_blank"><i class="fab fa-github"></i></a>
-      </li>
-      <li>
-        <a href="https://www.linkedin.com/in/vinicius-meneses/" target="_blank"><i class="fab fa-linkedin"></i></a>
-      </li>
-      <li>
-        <a href="https://www.facebook.com/vinicius.meneses.75" target="_blank"><i class="fab fa-facebook"></i></a>
-      </li>
-    </ul>
+    <div>
+      <h1 class="title"><strong>VINICIUS MENESES</strong></h1>
+      <h2 class="subtitle">Desenvolvedor Web</h2>
+      <ul class="social-media">
+        <li>
+          <a href="https://github.com/viniciusmeneses" target="_blank"><i class="fab fa-github"></i></a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/vinicius-meneses/" target="_blank"><i class="fab fa-linkedin"></i></a>
+        </li>
+        <li>
+          <a href="https://www.facebook.com/vinicius.meneses.75" target="_blank"><i class="fab fa-facebook"></i></a>
+        </li>
+      </ul>
+      </div>
+      <a href="#about-me" class="slide-anchor"><i class="fas fa-chevron-down"></i></a>
   </header>
-  <section id="about-me">
+  <section id="about-me" data-aos="fade">
     <h2>SOBRE MIM</h2>
     <p>Tenho 17 anos e sou formado em Técnico em Informática pela ETEC Hortolândia. Amo programar e aprender as
       tecnologias utilizadas no desenvolvimento web, a fim de desenvolver projetos utilizando-as para apeifeiçoar meu
       conhecimento. Atualmente estudo através de plataformas que oferecem cursos online e desenvolvo projetos <i>open source</i>
       para serem utilizados no dia a dia por qualquer pessoa.</p>
   </section>
-  <section id="skills">
+  <section id="skills" data-aos="fade">
     <h2>HABILIDADES</h2>
     <p>Além de ser proativo e comunicativo, possuo habilidade para trabalhar com as seguintes tecnologias e
       ferramentas:</p>
@@ -57,12 +61,12 @@
       </ul>
     </div>
   </section>
-  <section id="portfolio">
+  <section id="portfolio" data-aos="fade">
     <h2>PORTFÓLIO</h2>
     <p>Todos os projetos em que contribui ou foram desenvolvidos por mim podem ser testados e visualizados através do meu perfil no Github.</p>
     <a href="https://github.com/viniciusmeneses" target="_blank" class="btn-portfolio">Acessar Perfil</a>
   </section>
-  <section id="achievements">
+  <section id="achievements" data-aos="fade">
     <h2>CONQUISTAS</h2>
     <div class="cards-group">
       <div class="card">
@@ -91,6 +95,7 @@
     </div>
   </footer>
 
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="js/main.js"></script>
 </body>
 
