Updated header styles and added react to skills list

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
 <body>
   <header>
-    <div>
+    <div data-aos="fade">
       <h1 class="title"><strong>VINICIUS MENESES</strong></h1>
-      <h2 class="subtitle">Desenvolvedor Web</h2>
+      <h2 class="subtitle">Desenvolvedor Front-end</h2>
       <ul class="social-media">
         <li>
           <a href="https://github.com/viniciusmeneses" target="_blank"><i class="fab fa-github"></i></a>
@@ -49,8 +49,7 @@
         <li>HTML</li>
         <li>CSS</li>
         <li>Javascript</li>
-        <li>SASS</li>
-        <li>Webpack</li>
+        <li>React</li>
         <li>Gulp</li>
         <li>Node.js</li>
         <li>Express.js</li>
