Updated skills, about me text and achievements

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1 class="title">
           <strong>VINICIUS MENESES</strong>
         </h1>
-        <h2 class="subtitle">Desenvolvedor Front-end</h2>
+        <h2 class="subtitle">Estagiário - Desenvolvimento WEB</h2>
         <ul class="social-media">
           <li>
             <a href="https://github.com/viniciusmeneses" target="_blank">
@@ -45,9 +45,10 @@
     </header>
     <section id="about-me" data-aos="fade">
       <h2>SOBRE MIM</h2>
-      <p>Tenho 17 anos e sou formado em Técnico em Informática pela ETEC Hortolândia. Amo programar e aprender as tecnologias utilizadas no desenvolvimento web, a fim de desenvolver projetos utilizando-as para apeifeiçoar meu conhecimento. Atualmente estudo através de plataformas que oferecem cursos online e desenvolvo projetos
-        <i>open source</i>
-        para serem utilizados no dia a dia por qualquer pessoa.</p>
+      <p>
+         Tenho 17 anos e sou formado em Técnico em Informática pela ETEC Hortolândia. Amo programar e aprender as tecnologias utilizadas no desenvolvimento web, a fim de utilizá-las no desenvolvimento de projetos e adquirir mais conhecimento.
+         Atualmente realizo graduação em Análise e Desenvolvimento de Sistemas no IFSP Hortolândia e trabalho como estagiário desenvolvendo aplicações web e mobile.
+      </p>
     </section>
     <section id="skills" data-aos="fade">
       <h2>HABILIDADES</h2>
@@ -58,15 +59,16 @@
           <li>CSS</li>
           <li>Javascript</li>
           <li>React</li>
-          <li>Gulp</li>
-          <li>Node.js</li>
-          <li>Express.js</li>
+          <li>React Native</li>
+          <li>Redux</li>
+          <li>Node</li>
+          <li>ExpressJS</li>
           <li>SQL</li>
-          <li>NoSQL</li>
-          <li>Bootstrap</li>
-          <li>jQuery</li>
-          <li>Wordpress</li>
-          <li>Firebase</li>
+          <li>GraphQL</li>
+          <li>Ruby on Rails</li>
+          <li>Heroku</li>
+          <li>Filas Assíncronas</li>
+          <li>Integração de Sistemas</li>
           <li>Git</li>
         </ul>
       </div>
@@ -82,8 +84,8 @@
         <div class="card">
           <img src="img/certificate.png">
           <h3>PROJETO DESTAQUE</h3>
-          <p>A feira PROJETEC - 2018 concedeu o prêmio de
-            <strong>Projeto Destaque do Curso</strong>
+          <p>A feira FEBRACE - 2019 concedeu o prêmio de
+            <strong>2° lugar na categoria de Humanas - Projeto BooksTech</strong>
             ao projeto Bookstech.</p>
         </div>
         <div class="card">
